# senus-board-report

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  frontend.Dockerfile
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  chat.py  documents.py  insights.py  metrics.py  scenario.py  statements.py  validation.py  valuation.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: __init__.py
backend/app/services/: facts_repo.py  insights.py  llm.py  metrics_engine.py  rag.py  scenario.py  valuation.py
backend/pipeline/: embed.py  extract.py  load.py  run.py  schemas.py  validate.py
backend/tests/: conftest.py  test_api.py  test_metrics_engine.py  test_validation.py  test_valuation.py
data/extracted/: facts.json
data/extracted/raw/: ADF Farm Solutions Consolidated Financial Statements (30 June 2025).extracted.json  Senus Limited Company Balance Sheet (as at 8 December 2025).extracted.json  Senus PLC Direct Listing Launch Press Release.extracted.json  Senus PLC Information Document December 2025.extracted.json  Senus short corporate presentation 19032026.extracted.json  Senus_HalfYearResultsDec2025_PR_V19032026 FINAL clean.extracted.json  Senus_PR_LeadershipTransition_V24062026.extracted.json
data/market/: IE000O0F49R3-XACD_Performance.xlsx  SENUS_Historical_price.xlsx
docs/: ARCHITECTURE.md  FINANCIAL_FACTS.md  ONE_PAGE_WRITEUP.md
frontend/: README.md  next.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
(+22 files in other folders)
