[project]
name = "senus-board-report-backend"
version = "1.0.0"
description = "AI-native Board Report platform for Senus PLC - FastAPI backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "anthropic>=0.40",
    "pdfplumber>=0.11",
    "pdf2image>=1.17",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "python-multipart>=0.0.9",
    "rank-bm25>=0.2.2",
    "openai>=1.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "httpx>=0.27", "ruff>=0.5"]
vector = ["fastembed>=0.3", "pgvector>=0.3"]

[tool.setuptools]
# two top-level packages in a flat layout; without this, `pip install -e .` fails
# on setuptools auto-discovery ("Multiple top-level packages discovered")
packages = ["app", "pipeline"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
